fix vert scrollbar

--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -2,14 +2,13 @@
 @import url('../_less/base.less');
 @import url('../_less/fonts.less');
 
-@footer-height:100px;
-html {
+@footer-height: 100px;
+@content-width: 960px;
+html, body {
 	height: 100%;
 }
 body {
-	min-height: 100%;
 	font:16px 'Roboto',Arial, sans-serif;
-	padding-bottom: @footer-height + 20;
 	position: relative;
 	line-height: 1.42;
 	-webkit-font-smoothing: antialiased;
@@ -23,19 +22,20 @@ p {
 a {
 
 }
-footer {
+.page {
+	min-height: 100%;
+	margin-bottom: -@footer-height;
+}
+header, .section, footer {
+	min-width: @content-width;
+}
+footer, .footer-shiv {
+	clear: both;
 	height: @footer-height;
-	position: absolute;
-	width: 100%;
-	bottom: 0;
 }
 .main {
-	width: 960px;
+	width: @content-width;
 	margin: 0 auto;
-}
-#map {
-	width: 100%;
-	height: 500px;
 }
 
 //==================================
